// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`0x00 noop (): () -> () 1`] = `
Array [
  Object {
    "argTypes": Array [],
    "mnemonic": "noop",
    "opcode": 0,
    "opcodeHex": "0x00",
    "operandTypes": Array [],
    "resultTypes": Array [],
  },
]
`;

exports[`0x10 iadd (): (int32, int32) -> (int32) 1`] = `
Array [
  Object {
    "argTypes": Array [],
    "mnemonic": "iadd",
    "opcode": 16,
    "opcodeHex": "0x10",
    "operandTypes": Array [
      "int32",
      "int32",
    ],
    "resultTypes": Array [
      "int32",
    ],
  },
]
`;

exports[`0x20 jmp (label): () -> () 1`] = `
Array [
  Object {
    "argTypes": Array [
      "label",
    ],
    "mnemonic": "jmp",
    "opcode": 32,
    "opcodeHex": "0x20",
    "operandTypes": Array [],
    "resultTypes": Array [],
  },
]
`;

exports[`read all instructions 1`] = `
Array [
  Object {
    "argTypes": Array [
      "int32",
    ],
    "mnemonic": "iconst",
    "opcode": 0,
    "opcodeHex": "0x00",
    "operandTypes": Array [],
    "resultTypes": Array [
      "int32",
    ],
  },
  Object {
    "argTypes": Array [],
    "mnemonic": "iadd",
    "opcode": 1,
    "opcodeHex": "0x01",
    "operandTypes": Array [
      "int32",
      "int32",
    ],
    "resultTypes": Array [
      "int32",
    ],
  },
  Object {
    "argTypes": Array [],
    "mnemonic": "print",
    "opcode": 2,
    "opcodeHex": "0x02",
    "operandTypes": Array [
      "int32",
    ],
    "resultTypes": Array [],
  },
  Object {
    "argTypes": Array [
      "int32",
    ],
    "mnemonic": "gstore",
    "opcode": 3,
    "opcodeHex": "0x03",
    "operandTypes": Array [
      "int32",
    ],
    "resultTypes": Array [],
  },
  Object {
    "argTypes": Array [
      "int32",
    ],
    "mnemonic": "gload",
    "opcode": 4,
    "opcodeHex": "0x04",
    "operandTypes": Array [],
    "resultTypes": Array [
      "int32",
    ],
  },
  Object {
    "argTypes": Array [
      "label",
    ],
    "mnemonic": "jmp",
    "opcode": 5,
    "opcodeHex": "0x05",
    "operandTypes": Array [],
    "resultTypes": Array [],
  },
  Object {
    "argTypes": Array [],
    "mnemonic": "halt",
    "opcode": 6,
    "opcodeHex": "0x06",
    "operandTypes": Array [],
    "resultTypes": Array [],
  },
  Object {
    "argTypes": Array [
      "label",
    ],
    "mnemonic": "jne",
    "opcode": 7,
    "opcodeHex": "0x07",
    "operandTypes": Array [],
    "resultTypes": Array [],
  },
  Object {
    "argTypes": Array [],
    "mnemonic": "eq",
    "opcode": 8,
    "opcodeHex": "0x08",
    "operandTypes": Array [
      "int32",
      "int32",
    ],
    "resultTypes": Array [
      "boolean",
    ],
  },
  Object {
    "argTypes": Array [],
    "mnemonic": "ne",
    "opcode": 9,
    "opcodeHex": "0x09",
    "operandTypes": Array [
      "int32",
      "int32",
    ],
    "resultTypes": Array [
      "boolean",
    ],
  },
  Object {
    "argTypes": Array [],
    "mnemonic": "lt",
    "opcode": 10,
    "opcodeHex": "0x0a",
    "operandTypes": Array [
      "int32",
      "int32",
    ],
    "resultTypes": Array [
      "boolean",
    ],
  },
  Object {
    "argTypes": Array [],
    "mnemonic": "gt",
    "opcode": 11,
    "opcodeHex": "0x0b",
    "operandTypes": Array [
      "int32",
      "int32",
    ],
    "resultTypes": Array [
      "boolean",
    ],
  },
  Object {
    "argTypes": Array [],
    "mnemonic": "lte",
    "opcode": 12,
    "opcodeHex": "0x0c",
    "operandTypes": Array [
      "int32",
      "int32",
    ],
    "resultTypes": Array [
      "boolean",
    ],
  },
  Object {
    "argTypes": Array [],
    "mnemonic": "gte",
    "opcode": 13,
    "opcodeHex": "0x0d",
    "operandTypes": Array [
      "int32",
      "int32",
    ],
    "resultTypes": Array [
      "boolean",
    ],
  },
]
`;
